# phemex-javascript

./: .gitignore  .phemex-order-history.json  PLAN-ema-crossover.md  README.md  btc_ml_trader.py  buy.ts  generate_commands.rb  long-limit.ps1  long-limit.sh  long-limit.ts  long.ts  package.json  phemex-add-conditional-orders.ts  phemex-auth.ts  phemex-balances.js  phemex-balances.ts  phemex-cancel-order.ts  phemex-cancel-orders-all.sh  phemex-cancel-orders-all.ts  phemex-cancel-untriggered-by-price.sh  phemex-cancel-untriggered-by-price.ts  phemex-coinm-balance.ts  phemex-coinm-positions.ts  phemex-create-limit-order.ts  phemex-create-limit-orders.rb  phemex-list-untriggered-orders.rb  phemex-list-untriggered-orders.sh  phemex-list-untriggered-orders.ts  phemex-market-order.ts  phemex-public-products.ts  phemex-public-time.ts  phemex-record-ticker.ts  phemex-usdt-positions.ts  phemex-ws-ema-crossover.ts  phemex-ws-ema.ts  phemex-ws-price.py  phemex-ws-price.ts  phemex-ws-ticker.ts  phemex-ws-xbrusdt-ticker-simple.ts  phemex-ws-xti-ticker.ts  (+7 more)
cpp-ticker/: CMakeLists.txt
cpp-ticker/src/: main.cpp
csharp-ticker/: Program.cs  csharp-ticker.csproj
dev/: phemex-active-orders.ts  phemex-cancel-all-orders.ts
go-ticker/: go.mod  main.go
java-ticker/: build.gradle  run.sh  settings.gradle
kt-ticker/: build.gradle.kts  run.sh  settings.gradle.kts
php-ticker/: composer.json  ticker.php
py-ticker/: ticker.py
rb-ticker/: Gemfile  ticker.rb
rust-ticker/: Cargo.toml
rust-ticker/src/: main.rs
src/: cli-utils.ts  credentials.ts  dynamodb-flag.js  ema-calculator.ts  http-client.ts  persistence.ts  place-limit-order.test.ts  place-limit-order.ts  (+5 more)
(+7 files in other folders)
